--- a/src/PagesCss/signinAccount.css
+++ b/src/PagesCss/signinAccount.css
@@ -23,6 +23,8 @@
   border-radius: 5px;
   cursor: pointer;
   margin-top: 10px;
+  padding: 10px 0px;
+  font-weight: 700;
 }
 
 .social-signin {
@@ -43,8 +45,4 @@
   color: #ec2121;
   text-decoration: none;
   font-weight: bold;
-}
-
-.signup-link a:hover {
-  text-decoration: underline;
 }
