--- a/src/Components/HomPageComp/Css Files/Oneonone.css
+++ b/src/Components/HomPageComp/Css Files/Oneonone.css
@@ -54,7 +54,7 @@
   position: relative;
   width: 100%;
   padding-bottom: 20px; /* Add some space at the bottom */
-  border-bottom: 2px dotted #ccc; /* Light gray line after each item */
+  border-bottom: 2px solid black; /* Light gray line after each item */
   margin-bottom: 20px; /* Add some space after the border */
 }
 
@@ -95,7 +95,7 @@
   padding-bottom: 20px; /* Add some space at the bottom */
 
   margin-bottom: 20px; /* Add some space after the border */
-  border-bottom: dotted 2px #ccc;
+  border-bottom: solid 2px black;
 }
 
 .OneonOne-story-title {
