--- a/src/PagesCss/hompage.css
+++ b/src/PagesCss/hompage.css
@@ -2,10 +2,10 @@
 
 .cover-story-wrapper {
   display: grid;
-  grid-template-columns: 65% 25%;
+  grid-template-columns: 70% 35%;
   width: 100%;
-  margin-left: 5%;
-  margin-right: 100px;
+  padding-left: 10%;
+  padding-right: 15%;
   align-items: center;
 }
 
