--- a/src/Components/HomPageComp/Css Files/BookReview.css
+++ b/src/Components/HomPageComp/Css Files/BookReview.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;900&family=Oswald:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;900&family=Oswald:wght@400;700&display=swap");
 
 :root {
   --primary-color: #ec2121;
@@ -7,9 +8,10 @@
 }
 
 .BookReview-Heading {
-  padding-left: 5%;
-  padding-right: 5%;
+  padding-left: 10%;
+  padding-right: 10%;
   color: var(--primary-color);
+  font-family: "PT Serif";
   margin-top: 60px;
 }
 
