--- a/src/Components/HomPageComp/Css Files/FeaturedVideos.css
+++ b/src/Components/HomPageComp/Css Files/FeaturedVideos.css
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;900&family=Oswald:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;900&family=Oswald:wght@400;700&display=swap");
 
 /* Base Styles */
 .Featured-Heading {
-  padding-left: 5%;
-  padding-right: 5%;
+  padding-left: 10%;
+  padding-right: 10%;
   color: #ec2121;
+  font-family: "PT Serif";
   margin-top: 60px;
 }
 
