--- a/src/Components/siteheader.css
+++ b/src/Components/siteheader.css
@@ -66,7 +66,7 @@
   display: flex;
   align-items: center;
   gap: 10%;
-  padding: 15px 10%;
+  padding: 15px 15%;
 }
 
 .logo-container {
@@ -85,7 +85,6 @@
   width: 100%;
   height: 100px;
   position: relative;
-
   overflow: hidden;
 }
 .Moto-Overlay {
@@ -101,7 +100,6 @@
   font-size: 20px;
   box-sizing: border-box;
   text-align: left;
-
   /* Text display in exactly 2 lines with ellipsis if overflow */
   display: -webkit-box;
   -webkit-line-clamp: 1; /* Limits to 2 lines */
@@ -145,7 +143,7 @@
 /* Adjust desktop navigation to space items evenly */
 .desktop-nav {
   display: flex;
-  padding: 0% 5%;
+  padding: 0% 15%;
   gap: 5%;
   flex-grow: 1; /* Allow desktop-nav to take available space */
   justify-content: space-between; /* Spread nav items across full width */
@@ -155,7 +153,7 @@
 .nav-link {
   text-decoration: none;
   color: #333;
-  font-size: 24px; /* Default font size */
+  font-size: 20px; /* Default font size */
   font-weight: 600;
   transition: color 0.3s;
 }
@@ -170,9 +168,9 @@
   color: #333;
 }
 .Style-hr {
-  margin-left: 5%;
-  margin-right: 5%;
-  border: grey 1px solid;
+  border: black 0.01px solid;
+  margin-left: 10%;
+  width: 80%;
 }
 
 .hamburger {
