--- a/src/Components/HomPageComp/Css Files/RecentNews.css
+++ b/src/Components/HomPageComp/Css Files/RecentNews.css
@@ -1,18 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;900&family=Oswald:wght@400;700&display=swap");
 
 .Recent-news-heading {
-  margin-left: 10%;
+  margin-left: 17%;
   margin-top: 2%;
   color: #ec2121;
   font-family: "PT Serif";
-  font-size: 40px;
+  font-size: 35px;
   margin-bottom: 20px;
 }
 
 .Recent-news-row {
   display: flex;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 17%;
+  margin-right: 17%;
   margin-top: -10px;
   overflow-x: auto; /* Enable horizontal scrolling */
   white-space: nowrap; /* Prevent wrapping of items */
@@ -42,9 +42,9 @@
 }
 
 .Recent-news-Text {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", Arial, sans-serif;
   color: black;
-  font-size: 14px;
+  font-size: 13px;
   text-decoration: none; /* Ensure no underline */
   font-weight: 400;
   cursor: pointer;
@@ -57,9 +57,9 @@
 
 .styled-hr {
   display: block; /* Ensure it behaves as a block-level element */
-  margin-left: 10%;
+  margin-left: 16%;
   margin-right: 5%;
-  width: 80%;
+  width: 68%;
   margin-top: -0.01%;
   border: none; /* Remove default border */
   height: 2px; /* Set height of the line */
