--- a/src/Components/HomPageComp/Css Files/BookReview.css
+++ b/src/Components/HomPageComp/Css Files/BookReview.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;900&family=Oswald:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;900&family=Oswald:wght@400;700&display=swap");
 
 :root {
   --primary-color: #ec2121;
@@ -8,11 +7,11 @@
 }
 
 .BookReview-Heading {
-  padding-left: 16%;
+  padding-left: 17%;
   padding-right: 16%;
   color: var(--primary-color);
   font-family: "PT Serif";
-  margin-top: 60px;
+  margin-top: 20px;
   font-size: 17px;
 }
 
@@ -43,6 +42,7 @@
   width: 300px;
   height: 400px;
   object-fit: cover;
+  border-radius: 15px; /* Adjust the value as needed */
   transition: opacity 0.3s ease; /* Smooth transition for opacity */
 }
 
@@ -68,11 +68,11 @@
 
 .BookReview-text {
   margin-top: 10px;
-  font-family: "Oswald", sans-serif;
-  font-size: 25px;
-  font-weight: 300;
+  font-family: "PT Serif", sans-serif;
+  font-size: 22px;
+  font-weight: 700;
   width: 70%;
-  line-height: 35px;
+  line-height: 25px;
   transition: color 0.3s ease, text-shadow 0.3s ease; /* Smooth transition for text color and shadow */
 }
 
@@ -87,6 +87,7 @@
 
 .BookReview-date {
   font-family: "Oswald", sans-serif;
+  font-size: 15px;
   font-weight: 300;
   margin-top: -5px;
   transition: color 0.3s ease; /* Smooth transition for date color */
