--- a/src/Components/HomPageComp/Css Files/CoverStory.css
+++ b/src/Components/HomPageComp/Css Files/CoverStory.css
@@ -3,8 +3,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap");
 
 .Cover-Story-Heading {
-  padding-left: 16%;
-  padding-right: 16%;
+  padding-left: 17%;
+  padding-right: 17%;
   font-size: 17px;
   color: #ec2121;
   font-family: "PT Serif";
@@ -13,6 +13,7 @@
 
 .Styled-hr {
   border: 0;
+  margin-top: 5px;
   height: 2px;
   background: black;
 }
@@ -44,13 +45,13 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 15px; /* Adjust the value as needed */
   transition: opacity 0.3s ease;
 }
 .Cover-Story-Title-Overlay {
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 2;
-
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
 }
@@ -114,7 +115,7 @@
   color: black;
   font-family: "Merriweather";
   font-weight: 700;
-  font-size: 25px;
+  font-size: 22px;
   transition: color 0.3s ease, transform 0.3s ease;
   display: -webkit-box;
   -webkit-line-clamp: 2;
