--- a/src/Components/HomPageComp/Css Files/LeaderSpeak.css
+++ b/src/Components/HomPageComp/Css Files/LeaderSpeak.css
@@ -8,8 +8,7 @@
   flex-direction: row;
 }
 .LeaderSpeak-Heading {
-  padding-left: 16%;
-
+  padding-left: 17%;
   font-family: "PT Serif";
   color: #ec2121;
   margin-top: 60px;
@@ -43,6 +42,7 @@
 
 .LeaderSpeak-image {
   width: 100%;
+  border-radius: 15px; /* Adjust the value as needed */
   height: 250px; /* Set default height */
   object-fit: cover;
   transition: transform 0.3s ease;
@@ -53,7 +53,7 @@
   box-sizing: border-box;
   text-align: left;
   display: -webkit-box;
-  -webkit-line-clamp: 7;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
   font-size: 15px;
@@ -74,11 +74,16 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
+.image-title {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .Tab-titles {
   text-decoration: none;
   color: black;
-  font-size: 30px;
   font-family: "Oswald", sans-serif;
   display: -webkit-box;
   -webkit-line-clamp: 1;
@@ -90,7 +95,7 @@
 }
 .tab-content-title {
   font-family: "Merriweather", sans-serif;
-  font-size: 25px;
+  font-size: 22px;
 }
 .li-item {
   border-bottom: 2px solid black;
@@ -129,7 +134,7 @@
 
 .Side-leaderSpeak-title {
   color: black;
-  font-size: 25px;
+  font-size: 22px;
   font-family: "Merriweather", sans-serif;
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -149,6 +154,7 @@
   display: flex; /* Flexbox for horizontal alignment */
   gap: 20px; /* Space between tabs */
   margin-bottom: 15px; /* Space below the tab container */
+  margin-top: -15px;
   position: relative; /* Needed for absolute positioning of the underline */
 }
 
@@ -156,9 +162,8 @@
   font-family: "PT Serif";
   color: black;
   margin-top: 60px;
-  font-size: 15px;
   font-weight: 800;
-  font-size: 30px; /* Tab font size */
+  font-size: 1.9em; /* Tab font size */
   padding: 15px 15px; /* Padding for better touch area */
   border: none; /* No border */
   cursor: pointer; /* Pointer cursor on hover */
