--- a/src/Components/HomPageComp/Css Files/RecentNews.css
+++ b/src/Components/HomPageComp/Css Files/RecentNews.css
@@ -6,7 +6,7 @@
   color: #ec2121;
   font-family: "PT Serif";
   font-size: 35px;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 
 .Recent-news-row {
@@ -42,11 +42,11 @@
 }
 
 .Recent-news-Text {
-  font-family: "Oswald", Arial, sans-serif;
+  font-family: "PT Serif", Arial, sans-serif;
   color: black;
   font-size: 13px;
   text-decoration: none; /* Ensure no underline */
-  font-weight: 400;
+  font-weight: 200;
   cursor: pointer;
   transition: color 0.3s ease, transform 0.3s ease; /* Smooth transition for color and transform */
 }
@@ -57,9 +57,8 @@
 
 .styled-hr {
   display: block; /* Ensure it behaves as a block-level element */
-  margin-left: 16%;
-  margin-right: 5%;
-  width: 68%;
+  margin-left: 17%;
+  width: 66%;
   margin-top: -0.01%;
   border: none; /* Remove default border */
   height: 2px; /* Set height of the line */
