--- a/src/Components/HomPageComp/Css Files/LeaderSpeak.css
+++ b/src/Components/HomPageComp/Css Files/LeaderSpeak.css
@@ -11,8 +11,8 @@
   padding-left: 17%;
   font-family: "PT Serif";
   color: #ec2121;
-  margin-top: 60px;
-  font-size: 15px;
+  margin-top: 20px;
+  font-size: 13px;
   width: 50%;
 }
 
@@ -98,7 +98,7 @@
   font-size: 22px;
 }
 .li-item {
-  border-bottom: 2px solid black;
+  border-bottom: rgba(0, 0, 0, 0.5) 0.01px solid;
   padding: 25px 0px;
 }
 
@@ -126,7 +126,7 @@
 .leaderSpeak-date {
   font-family: "Merriweather Sans";
   font-weight: 400;
-  font-size: 15px;
+  font-size: 12px;
   color: black;
   margin-bottom: 5px;
   transition: color 0.3s ease; /* Smooth color transition */
@@ -154,7 +154,7 @@
   display: flex; /* Flexbox for horizontal alignment */
   gap: 20px; /* Space between tabs */
   margin-bottom: 15px; /* Space below the tab container */
-  margin-top: -15px;
+  margin-top: -9.5%;
   position: relative; /* Needed for absolute positioning of the underline */
 }
 
@@ -163,7 +163,7 @@
   color: black;
   margin-top: 60px;
   font-weight: 800;
-  font-size: 1.9em; /* Tab font size */
+  font-size: 25px; /* Tab font size */
   padding: 15px 15px; /* Padding for better touch area */
   border: none; /* No border */
   cursor: pointer; /* Pointer cursor on hover */
