--- a/src/Components/HomPageComp/Css Files/Oneonone.css
+++ b/src/Components/HomPageComp/Css Files/Oneonone.css
@@ -7,8 +7,8 @@
   padding-left: 17%;
   padding-right: 16%;
   color: #ec2121;
-  margin-top: 20px;
-  font-size: 17px;
+  margin-top: 10px;
+  font-size: 13px;
   font-family: "PT Serif";
   display: -webkit-box;
   -webkit-line-clamp: 2;
@@ -22,8 +22,7 @@
   margin-bottom: 10px;
 }
 .Styled-hr {
-  border-width: 5px;
-  background: linear-gradient(to right, red 10%, black 10%);
+  border: rgba(0, 0, 0, 0.2) 0.01px solid;
 }
 
 .OneonOne-description {
@@ -48,7 +47,7 @@
 .OneonOne-Container {
   display: flex;
   height: 100%;
-  margin-top: 20px;
+  margin-top: -10px;
   flex-wrap: wrap; /* Allow items to wrap */
 }
 
@@ -56,7 +55,7 @@
   position: relative;
   width: 100%;
   padding-bottom: 20px; /* Add some space at the bottom */
-  border-bottom: 2px solid black; /* Light gray line after each item */
+  border-bottom: rgba(0, 0, 0, 0.5) 0.01px solid;
   margin-bottom: 20px; /* Add some space after the border */
 }
 
@@ -96,7 +95,7 @@
 .OneonOne-story {
   padding-bottom: 20px; /* Add some space at the bottom */
   margin-bottom: 20px; /* Add some space after the border */
-  border-bottom: solid 2px black;
+  border-bottom: rgba(0, 0, 0, 0.5) 0.01px solid;
 }
 
 .OneonOne-story-title {
