--- a/src/Components/HomPageComp/Css Files/RecentNews.css
+++ b/src/Components/HomPageComp/Css Files/RecentNews.css
@@ -5,7 +5,7 @@
   margin-top: 2%;
   color: #ec2121;
   font-family: "PT Serif";
-  font-size: 35px;
+  font-size: 25px;
   margin-bottom: 5px;
 }
 
@@ -62,5 +62,5 @@
   margin-top: -0.01%;
   border: none; /* Remove default border */
   height: 2px; /* Set height of the line */
-  background-color: black; /* Line color */
+  border: rgba(0, 0, 0, 0.2) 0.01px solid; /* Semi-transparent thin line */
 }
