--- a/src/Components/HomPageComp/Css Files/Oneonone.css
+++ b/src/Components/HomPageComp/Css Files/Oneonone.css
@@ -17,9 +17,8 @@
   text-overflow: ellipsis;
 }
 .OneonOne-story-interviewee {
-  font-size: 12px;
-  font-weight: 300;
-  margin-bottom: 10px;
+  font-size: 15px;
+  color: black;
 }
 .Styled-hr {
   border: rgba(0, 0, 0, 0.2) 0.01px solid;
@@ -31,6 +30,7 @@
   font-weight: 200;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  margin-top: 10px;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -102,7 +102,6 @@
   color: black;
   font-size: 22px;
   font-weight: 700;
-  padding: 5px 0px;
   font-family: "Merriweather";
   transition: color 0.3s ease; /* Smooth color transition */
   display: -webkit-box;
@@ -115,10 +114,8 @@
 .OneonOne-date {
   font-family: "Merriweather Sans";
   font-weight: 400;
-  margin-top: -5px;
   font-size: 12px;
   color: black;
-  transition: color 0.3s ease; /* Smooth color transition */
 }
 @media (max-width: 1024px) {
   .OneonOne-image {
