--- a/src/Components/EventPageComp/Css/eventHeader.css
+++ b/src/Components/EventPageComp/Css/eventHeader.css
@@ -5,13 +5,13 @@
   flex-direction: column;
   align-items: center;
   background-color: #f8f8f8; /* Light background color */
-  padding: 0% 5%;
+  padding: 0% 18%;
   border-radius: 10px; /* Rounded corners for the header */
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Subtle shadow effect */
 }
 
 #Event-Title {
-  font-size: 56px;
+  font-size: 40px;
   color: #d90000;
   margin: 10px 0; /* Adjust margins */
   font-family: "Oswald", sans-serif;
@@ -40,16 +40,10 @@
   text-decoration: none; /* Remove underline */
   font-family: "PT Serif", serif;
   font-weight: 700;
-  font-size: 24px; /* Font size */
+  font-size: 16px; /* Default font size */
   padding: 10px 15px; /* Padding around links */
   border-radius: 5px; /* Rounded corners */
-  transition: background-color 0.3s, transform 0.2s; /* Smooth background color transition */
-}
-
-.tab-link:hover {
-  background-color: #d90000; /* Change background color on hover */
-  color: white; /* Change text color on hover */
-  transform: scale(1.05); /* Slightly enlarge on hover */
+  margin-bottom: -20px;
 }
 
 .hamburger {
@@ -102,11 +96,6 @@ hr {
   font-size: 20px; /* Font size for mobile */
   padding: 10px 15px; /* Padding around links */
   transition: background-color 0.3s; /* Smooth background color transition */
-}
-
-.mobile-tab-link:hover {
-  background-color: #d90000; /* Change background color on hover */
-  color: white; /* Change text color on hover */
 }
 
 /* Responsive adjustments */
