--- a/src/Components/HomPageComp/Css Files/BookReview.css
+++ b/src/Components/HomPageComp/Css Files/BookReview.css
@@ -86,11 +86,11 @@
 }
 
 .BookReview-date {
-  font-family: "Oswald", sans-serif;
-  font-size: 15px;
-  font-weight: 300;
-  margin-top: -5px;
-  transition: color 0.3s ease; /* Smooth transition for date color */
+  font-family: "Merriweather Sans";
+  font-weight: 400;
+  font-size: 12px;
+  color: black;
+  margin-top: -10px;
 }
 
 /* Responsive Styles */
