--- a/src/Components/HomPageComp/Css Files/CityAndArticles.css
+++ b/src/Components/HomPageComp/Css Files/CityAndArticles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;900&family=Oswald:wght@400;700&display=swap");
 
 /* Base Styles */
@@ -8,10 +10,6 @@
   margin-top: 0px;
   font-size: 13px;
   font-family: "PT Serif";
-}
-
-.Styled-hr {
-  border: solid 2px grey;
 }
 
 .City-Container {
@@ -128,12 +126,13 @@
 }
 
 .Article-date {
-  font-size: 14px;
-  color: #555;
-  margin: 0;
   margin-top: 50px;
   padding-right: 10px; /* Add a bit of space between date and title */
   text-align: left;
+  font-family: "Merriweather Sans";
+  font-weight: 400;
+  font-size: 12px;
+  color: black;
 }
 
 /* Responsive Styles */
