--- a/src/Components/HomPageComp/Css Files/EditorialUrban.css
+++ b/src/Components/HomPageComp/Css Files/EditorialUrban.css
@@ -149,12 +149,11 @@
 }
 
 .Urban-date {
-  font-size: 14px;
-  color: #555;
-  margin: 0;
+  font-family: "Merriweather Sans";
+  font-weight: 400;
+  font-size: 12px;
+  color: black;
   margin-top: -10px;
-  padding-right: 10px; /* Add a bit of space between date and title */
-  text-align: left;
 }
 
 .Editorial-date {
