--- a/src/PagesCss/hompage.css
+++ b/src/PagesCss/hompage.css
@@ -5,18 +5,18 @@
   grid-template-columns: 75% 30%;
   width: 100%;
   padding-left: 17%;
-  padding-right: 20%;
+  padding-right: 22%;
   align-items: center;
 }
 
 .slide-container {
   position: relative;
-  height: 600px;
+  height: 100%;
 }
 
 .slider-card-image {
   width: 100%;
-  height: 700px;
+  height: 100%;
   object-fit: cover;
   transition: transform 0.3s ease;
 }
@@ -49,10 +49,8 @@
     0.7
   ); /* Slightly darker for readability */
   padding: 15px 20px;
-  font-size: 30px;
   font-weight: 700;
   text-align: center;
-
   box-sizing: border-box;
   z-index: 2; /* Ensures text overlay is above image effects */
 }
@@ -60,14 +58,13 @@
 .title-overlay h2 {
   margin: 0;
   color: black;
-  font-size: 35px;
+  font-size: 22px;
 }
 
 .magazine-image {
-  width: 450px;
-  height: 600px;
-  padding-right: 35%;
-  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
   margin-left: 4%;
   transition: transform 0.3s ease;
 }
