--- a/src/Components/HomPageComp/Css Files/Velocity.css
+++ b/src/Components/HomPageComp/Css Files/Velocity.css
@@ -5,15 +5,13 @@
 .Velocity-Heading {
   padding-left: 17%;
   padding-right: 16%;
-  font-size: 13px;
-  color: #ec2121;
-  font-family: "PT Serif";
   margin-top: 10px;
 }
 
 .Styled-hr {
   border: rgba(0, 0, 0, 0.2) 0.01px solid;
   width: 100%;
+  margin-top: 5px;
 }
 
 .Velocity-Container {
@@ -59,11 +57,8 @@
 
 .Velocity-text {
   margin-top: 10px;
-  font-family: "Merriweather", sans-serif;
-  font-size: 22px;
   font-weight: bold;
   width: 100%;
-  color: black;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
